--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "eslint": "^3.17.1",
     "husky": "^0.13.2",
+    "memdb": "^1.3.1",
     "tape": "^4.6.3"
   },
   "scripts": {
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "bluebird": "^3.5.0",
-    "debug": "^2.6.1"
+    "debug": "^2.6.1",
+    "stream-collector": "^1.0.1"
   }
 }
