--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tradle/validate-resource": "^2.8.0",
     "co": "^4.6.0",
     "debug": "^2.6.1",
+    "object.omit": "^3.0.0",
     "xtend": "^4.0.1"
   }
 }
