--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
   "scripts": {
     "test": "BLUEBIRD_DEBUG=1 node test",
     "lint": "eslint --quiet --ignore-path .gitignore .",
-    "precommit": "yarn lint"
+    "precommit": "yarn lint && yarn test"
   },
   "dependencies": {
     "@tradle/build-resource": "^2.7.0",
     "@tradle/constants": "^2.1.0",
     "@tradle/validate-model": "^2.0.2",
     "@tradle/validate-resource": "^2.8.0",
+    "bindall": "^2.0.1",
     "co": "^4.6.0",
     "debug": "^2.6.1",
     "object.omit": "^3.0.0",
+    "object.pick": "^1.3.0",
     "xtend": "^4.0.1"
   }
 }
