--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@tradle/build-resource": "^2.7.0",
     "@tradle/constants": "^2.1.0",
-    "@tradle/validate-model": ">=2.3 <4",
+    "@tradle/validate-model": "^4.1.0",
     "@tradle/validate-resource": "^2.8.0",
     "bindall": "^2.0.1",
     "co": "^4.6.0",
