--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "scripts": {
     "test": "BLUEBIRD_DEBUG=1 node test",
     "lint": "eslint --quiet --ignore-path .gitignore .",
-    "precommit": "yarn lint && yarn test"
+    "precommit": "npm run lint && npm run test"
   },
   "dependencies": {
     "@tradle/build-resource": "^4.0.1",
     "@tradle/constants": "^2.1.0",
-    "@tradle/validate-model": "^7.0.0",
-    "@tradle/validate-resource": "^4.0.0",
+    "@tradle/validate-model": "^7.1.22",
+    "@tradle/validate-resource": "^4.3.4",
     "bindall": "^2.0.1",
     "co": "^4.6.0",
     "debug": "^2.6.1",
